--- a/css/styles.css
+++ b/css/styles.css
@@ -268,7 +268,7 @@ body{
 }
 
 .questions{
-  text-align: center;
+  text-align: justify;
 }
 
 .questions_container{
@@ -323,7 +323,7 @@ body{
 }
 
 .questions_show{
-  text-align: left;
+  text-align: justify;
   height: 0;
   margin: 0;
   transition: height .3s;
@@ -506,10 +506,12 @@ label{
 @media (max-width:800px){
 
   .container_carrusel{
-    height: 240px;
+    height: 260px;
   }
 
-
+  .about-main{
+    padding-bottom: 2px;
+  }
   
   .nav_menu{
     display: block;
@@ -520,7 +522,7 @@ label{
     background-color: var(--color-background3);
     top: 0;
     left: 0;
-    height: 100%;
+    height: 300px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -530,6 +532,7 @@ label{
     opacity: 0;
     pointer-events: none;
     transition: .7 opacity;
+    padding-top: 55px;
   }
 
   .nav_link--show{
@@ -541,8 +544,8 @@ label{
 
   .nav_close{
     position: absolute;
-    top: 30px;
-    right: 45px;
+    top: 75px;
+    right: 25px;
     width: 45px;
     cursor: pointer;
   }
@@ -665,6 +668,7 @@ label{
 
   .testimony{
     --paddint-container: 60px 0;
+    justify-items: center;
   }
 
   .testimony_container{
